# AuroraStay-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.adr/: ADR-0001-fastapi.md  ADR-0002-postgresql.md  ADR-0003-qdrant.md  ADR-0004-langgraph.md  ADR-0005-redis.md  ADR-0006-mlflow.md
.foundation/: ai_principles.md  architecture_principles.md  coding_standards.md  constitution.md  decision_process.md  definition_of_done.md  definition_of_ready.md  documentation_standards.md  engineering_principles.md  execution-rules.md  execution-state.md  git_workflow.md  quality_gates.md  repository_standards.md  security_principles.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.loops/: loop00.md  loop01.md  loop02.md  loop03.md  loop04.md  loop05.md  loop06.md  loop07.md  loop08.md  loop09.md  loop10.md  loop11.md  loop12.md  loop13.md  loop14.md  loop15.md  loop16.md  loop17.md  loop18.md
.prd/: assumptions.md  functional_requirements.md  non_functional_requirements.md  product_requirements.md  risks.md  roadmap.md  success_metrics.md  user_personas.md  user_stories.md
.rfc/: RFC-0001-backend.md  RFC-0002-ai-platform.md  RFC-0003-rag.md  RFC-0004-ml-platform.md  RFC-0005-dashboard.md  RFC-0006-reservation-platform.md
.specs/: README.md
.templates/: adr.md  issue.md  pr.md  rfc.md  specification.md
agents/: README.md
ai/: README.md
api/: README.md
backend/: README.md  main.py
business/: README.md
dashboard/: README.md  __init__.py  exceptions.py
database/: README.md
deployment/: README.md
docker/: backend.Dockerfile  dashboard.Dockerfile  (+2 more)
(+640 files in other folders)
