[project]
name = "hospitality-ai"
version = "1.0.0"
description = "Enterprise-grade AI-powered Hospitality Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.3",
    "qdrant-client>=1.8.2",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    "pyjwt[crypto]>=2.8.0",
    "cryptography>=42.0.5",
    "langgraph>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "ruff>=0.3.5",
    "mypy>=1.9.0",
    "bandit>=1.7.8",
    "detect-secrets>=1.5.0",
]
test = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]
ml = [
    "mlflow>=2.11.3",
]

[tool.uv]
dev-dependencies = [
    "pre-commit",
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S"]
ignore = ["S101", "B008", "N999", "E501"]  # S101 allows assert, B008 allows Depends, N999 ignores hyphenated package name, E501 ignores line length

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=shared --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["shared*"]

